--- a/style.css
+++ b/style.css
@@ -18,25 +18,30 @@ body {
     font-family: 'poppins', sans-serif;
     color: var(--primary-text-color);
     background: #021a2d;
+    /* align-content: flex;
+    display: flex; */
 }
 
 h1 {
     font-size: 3rem;
+    /* display: flex; */
 }
 
 h2 {
     font-size: 2rem;
+    /* display: flex; */
 }
 
 h2 {
     font-size: 1.5rem;
+    /* display: flex; */
 }
 
 p {
     font-family: 'Roboto',sans-serif;
-    font-size: 1.25rem;
-    color: var(--secondary-text-color);
-    line-height: 1.8rem; 
+    color: aliceblue;
+    /* line-height: 1.8rem; */
+   
 }
 
 a {
@@ -77,6 +82,7 @@ li{
     padding: 5px 8px ;
     box-shadow: 0 0 2px var(--secondary-text-color);
     transition:0.2s ease-out;
+    /* display: flex; */
 
 }
 
@@ -89,7 +95,17 @@ li{
     
     padding: 20px;
     justify-content: space-between;
-    margin-top: 20px;
+    margin-top: 15px;
+    align-items: right;
+    /* display : flex; */
+}
+
+ul li div {
+    width: 100%;
+    height: 100%;
+    background-color: #1ea688;
+    padding: 10px 20px;
+    border-radius: 20px;
 }
 
 #prep {
@@ -117,15 +133,122 @@ header{
 .header-section {
     justify-content: center;
     gap: 50px;
-}
 
-.header-right img {
-    width: 500px;
-    height: 300px;
-    flex-wrap: wrap;
 }
 
 .header-left p {
     max-width: 40vw;
    margin:  10px 40px;
+   padding: 10px;
+}
+
+#head {
+    font-size: 1000px;
+
+}
+
+#gif {
+    align-items: flex-end;
+    width: 100%;
+    height: 100%;
+}
+
+
+#login{
+    margin-left: 250px;
+    margin-top: 10px;
+    border: #021a2d;
+    padding: 10px 80px;
+    font-size:30px;
+    text-align: center;
+    color: #fff;
+    border-radius:30px;
+
+}
+
+#h-3{
+    margin-top: 20px;
+    margin-left: 270px;
+    color: #fff;
+}
+
+#sign{
+    margin-top: 0px;
+    margin-left: 330px;
+    color:#1ea688;
+    font-style: bold;
+}
+
+.container2 {
+    position: relative;
+    text-align: center;
+    display: inline-block;
+}
+
+#head2 {
+    text-align: center;
+    top: 1350px;
+    left: 1000px;
+    position: absolute;
+    font-size: 100px;
+    color:#1ea688;
+    font-weight: bold;
+}
+
+#para {
+    text-align: left;
+    width: 600px;
+    margin-right: 50px;
+    top: 1530px;
+    left: 1010px;
+    position: absolute;
+    font-size: 30px;
+    color: #fff;
+}
+
+#roadmap {
+    top: 1700px;
+    left: 1010px;
+    position: absolute;
+    border: #021a2d;
+    padding: 10px 80px;
+    font-size:30px;
+    text-align: center;
+    color: #fff;
+    border-radius:30px;
+
+}
+
+#head3 {
+    text-align: left;
+    top: 2350px;
+    right: 1150px;
+    position: absolute;
+    font-size: 100px;
+    color:#1ea688;
+    font-weight: bold; 
+}
+
+#para2 {
+    text-align: left;
+    width: 600px;
+    margin-right: 50px;
+    top: 2650px;
+    right: 1150px;
+    position: absolute;
+    font-size: 30px;
+    color: #fff;
+}
+
+#internship {
+    top: 2820px;
+    right: 1370px;
+    position: absolute;
+    border: #021a2d;
+    padding: 10px 80px;
+    font-size:30px;
+    text-align: center;
+    color: #fff;
+    border-radius:30px;
+
 }
